2014-06-06  Santiago Payà i Miralta  <santiagopim@gmail.com>

	* vc/vc-hg.el (vc-hg-working-revision): Use "hg parent" and
	vc-hg-command (bug#17570).

2014-06-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (ucs-names): Add special entry for BEL
	(bug#17702).

2014-06-06  Glenn Morris  <rgm@gnu.org>

	* startup.el (window-setup-hook): Doc fix.

2014-06-05  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (package-check-signature)
	(package-unsigned-archives): Doc fixes.

2014-06-03  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-use-some-window): Don't make window
	used smaller than it was before (Bug#17671).

2014-06-03  Eli Zaretskii  <eliz@gnu.org>

	* menu-bar.el (menu-bar-open): Fix last change: use the PC
	'redisplay' instead of '(sit-for 0)'.

2014-06-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-ssh-controlmaster-options): Improve search
	regexp.  (Bug#17653)

2014-06-03  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (package-pinned-packages): Doc fix.

2014-06-02  Eli Zaretskii  <eliz@gnu.org>

	* menu-bar.el (menu-bar-open): Fix invocation via M-x.

2014-06-01  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (keyboard-quit): Force update of mode lines, to remove
	the "Def" indicator, if we were defining a macro.  (Bug#17615)

2014-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-force-complete-and-exit):
	Obey minibuffer-default (bug#17545).

	* progmodes/js.el (js-indent-line): Don't mix columns and chars
	(bug#17619).

2014-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (set-transient-map): Don't wait for some "nested"
	transient-map to finish if we're only supposed to be active for
	the next command (bug#17642).

2014-05-31  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/gv.el (window-buffer, window-display-table)
	(window-dedicated-p, window-hscroll, window-point, window-start):
	Fix gv-expander.  (Bug#17630)
