@@ -1,3 +1,12 @@
+2014-06-06  Juri Linkov  <juri@jurta.org>
+
+	* desktop.el: Activate auto-saving on window configuration changes.
+	(desktop-save-mode, desktop-auto-save-timeout): Add/remove
+	`desktop-auto-save-set-timer' to/from `window-configuration-change-hook'.
+	(desktop-auto-save-set-timer): Change REPEAT arg of
+	`run-with-idle-timer' from t to nil.
+	http://lists.gnu.org/archive/html/emacs-devel/2014-06/msg00147.html
+
 2014-06-06  Santiago Payà i Miralta  <santiagopim@gmail.com>
 
 	* vc/vc-hg.el (vc-hg-working-revision): Use "hg parent" and
